PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? Nov 2008, PHP 5.2.7RC3
- Updated timezone database to version 2008.9. (Derick)

- Fixed bug #46426 (offset parameter of stream_get_contents() does not work
  for "0"). (Felipe)
- Fixed bug #46406 (Unregistering nodeclass throws E_FATAL). (Rob)
- Fixed bug #46389 (NetWare needs small patch for _timezone).
  (patch by guenter@php.net)
- Fixed bug #46388 (stream_notification_callback inside of object destroys 
  object variables). (Felipe)
- Fixed bug #46381 (wrong $this passed to internal methods causes segfault). 
  (Tony)
- Fixed bug #46082 (stream_set_blocking() can cause a crash in some
  circumstances). (Felipe)
- Fixed bug #46064 (Exception when creating ReflectionProperty object on 
  dynamicly created property). (Felipe)
- Fixed bug #45529 (new DateTimeZone() and date_create()->getTimezone() behave
  different). (Derick)
- Fixed bug #44938 (gettext functions crash with overly long domain).
  (Christian Schneider, Ilia)
- Fixed bug #43452 (strings containing a weekday, or a number plus weekday
  behaved incorrect of the current day-of-week was the same as the one in the
  phrase).(Derick)
- Fixed bug #42294 (Unified solution for round() based on C99 round). (Ilia)

- Fixed ability to use "internal" heaps in extensions. (Arnaud, Dmitry)
- Fixed weekdays adding/subtracting algorithm. (Derick)
- Fixed some ambiguities in the date parser. (Derick)
- Fixed a bug with the YYYY-MM format not resetting the day correctly. (Derick)
- Fixed a bug in the DateTime->modify() methods, it would not use the advanced
  relative time strings. (Derick)

23 Oct 2008, PHP 5.2.7RC2
- Upgraded bundled libzip to 0.9.0. (Pierre)

- Fixed extraction of zip files or directories when the entry name is 
  a relative path. (Pierre)
- Fixed read or write errors for large zip archives. (Pierre)
